Dark mode CSS – Teambuilder (Fix Some Colors)
https://imgur.com/a/hrmtl

--- a/style/client.css
+++ b/style/client.css
@@ -3381,6 +3381,36 @@ a.ilink.yours {
 
 /* teambuilder set */
 
+.dark .utilichart h3, .dark .dexentry h3, .dark .resultheader h3 {
+	background: #636363;
+	color: #F1F1F1;
+	border: 1px solid #A9A9A9;
+	text-shadow: 1px 1px 0 rgb(40, 43, 45);
+	box-shadow: inset 0px 1px 0 rgb(49, 49, 49);
+	border-right: none;
+}
+
+.dark .teambar button {
+	background: #5A6570;
+	color: #F1F1F1;
+	border: 1px solid #AAAAAA;
+}
+
+.dark .teambar button:hover {
+	background: #444C54;
+	color: #F1F1F1;
+	border: 1px solid #AAAAAA;
+}
+
+.dark .teambar button:disabled, .dark .teambar button:disabled:hover, .dark .teambar button:disabled:active {
+    color: #ffffff;
+    background: #2d343a;
+    border-color: #6bacc5;
+    opacity: 1;
+}
+
+
+
 .dark .teambuilder-results .result a:hover {
 	border-color: #555555;
 	background: rgba(47, 47, 47, 0.8);
@@ -3399,7 +3429,7 @@ a.ilink.yours {
 .dark .utilichart .namecol,
 .dark .utilichart .pokemonnamecol,
 .dark .utilichart .movenamecol {
-	color: #DDD;
+	color: #FFF;
 }
 .dark .utilichart .cur .labelcol em,
 .dark .utilichart .cur .widelabelcol em,
@@ -3419,7 +3449,9 @@ a.ilink.yours {
 .dark .utilichart a:hover .namecol,
 .dark .utilichart a:hover .pokemonnamecol,
 .dark .utilichart a:hover .movenamecol {
-	color: #DDD;
+	color: #FFF;
+	background: #636363;
+	border: 1px solid #AAA;
 }
 
 .dark .setchart,
